--- a/templates/register.html
+++ b/templates/register.html
@@ -18,5 +18,8 @@ $def with ()
 	  <span class="logininfo">Confirm: </span>
 	  <input class="input_field" id='repword' name='repword' type='password'/><br/>
   </div><br/>
+  <div class="error" id="error">
+	
+  </div>
   <input type='button' value='Register' onclick='doLogin()'/>
 </div>
