increased size of question on question page

--- a/templates/question.html
+++ b/templates/question.html
@@ -5,9 +5,9 @@ $def with (question, commentsList)
 <!-- comment object=> ans(string), up(int) , down(int) -->
 
 <div>
-	<div class="question">
+	<div class="question"><h3>
 		<span style='font-weight:bold; border: 0px'>$question.name</span> asked if they should $question.opt1 or $(question.opt2)...
-	</div>
+	</h3></div>
 	<div id="comment" ContentEditable="true">
 		Oblige them.
 	</div>
