--- a/templates/question.html
+++ b/templates/question.html
@@ -12,9 +12,10 @@ $def with (question, commentsList)
 		Oblige them.
 	</div>
 	<span class="btn btn-info" id="comments" onclick='doComment()'>Comment</span>
-	<ul id='cm-list'> 
+	<ul id='cm-list'> <h4>
 		$for comment in commentsList:
 			<li>$comment.ans</li>
+		</h4>
 	</ul>
 
 
