--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 #title {
+	padding-top: 10%;
+	padding-left: 50%;
 	text-align: center;
 	font-family: Calibri;
 }
 
 .start{
 	border: solid;
+	width: 60px;
 	float: left;
 	display: inline;
+	text-align: center;
+	font-family: Calibri;
 }
 
 .text{
@@ -20,7 +25,7 @@
 
 .main{
 	width:100%;
-    position:absolute;
-    padding-left: 35%;
+    position:relative;
+    padding-left: 60%;
     padding-bottom: 50%;
 }
