--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,17 @@
 <html>
-	<head>
-		<title>What Should I Do?</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
-	</head>
-	<body>
-		<h1 id="title">What Should I Do?</h1>
-		<div class="main">
-			<span class="text">Should I </span>
-			<div class="start" contentEditable="true">FILLER</div>
-			<span class="text"> or </span>
-			<div class="start" contentEditable="true">FILLER</div>
-			<span class="text">?</span>
-		</div>
-		<div class="login">
-		</div>
-	</body>
+  <head>
+  <title>What Should I Do?</title>
+  <link rel="stylesheet" type="text/css" href="style2.css">
+  </head>
+
+  <body>
+      <div id='sbox'>
+        <h1>What Should I Do?</h1>
+        <span>Should I</span>
+        <div contentEditable='true'></div>
+        <span>or</span>
+        <div contentEditable='true'></div>
+        <span>?</span>
+      </div>
+  </body>
 </html>
