--- a/static/style.css
+++ b/static/style.css
@@ -1,31 +1,25 @@
-#title {
-	padding-top: 10%;
-	padding-left: 50%;
-	text-align: center;
-	font-family: Calibri;
+html,body {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  margin: 0px;
+  padding: 0px;
+	font-family: calibri;
 }
 
-.start{
-	border: solid;
-	width: 60px;
-	float: left;
-	display: inline;
-	text-align: center;
-	font-family: Calibri;
+#sbox > * {
+  margin: 2px;
 }
 
-.text{
-	font-family: Calibri;
-	display: inline;
-	float: left;
-	border: none;
-	margin-right: 2em;
-	margin-left: 2em;
+#sbox > div {
+  border: 1px solid;
+  min-width: 10em;
+  height: 1em;
+  display: inline-block;
 }
 
-.main{
-	width:100%;
-    position:relative;
-    padding-left: 60%;
-    padding-bottom: 50%;
+#sbox {
+  position: relative;
+  top: 40%;
+  padding: auto;
 }
