--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
   <title>What Should I Do?</title>
-  <link rel="stylesheet" type="text/css" href="style2.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   </head>
 
   <body>
