changing login.html

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,13 +4,22 @@
 		<link rel="stylesheet" type="text/css" href="login_style.css">
 	</head>
 	<body>
+	    <div id='sbox'>
+        <h1>What Should I Do?</h1>
+        <span>Should I</span>
+        <div contentEditable='true'></div>
+        <span>or</span>
+        <div contentEditable='true'></div>
+        <span>?</span>
+      </div>
+	  
 		<h1 id="title">What Should I Do?</h1>
 		<h2 id="login">Log-in</h2>
 		<div class="main">
 			<span class="text">Username: </span>
-			<div class="edit">________</div>
+			<div contentEditable='true'>________</div>
 			<span class="text">Password: </span>
-			<div class="edit">______</div>
+			<div contendEditable='true'>______</div>
 
 		</div>
 		
