--- a/static/style.css
+++ b/static/style.css
@@ -23,3 +23,17 @@ html,body {
   top: 40%;
   padding: auto;
 }
+
+.popup {
+  position: absolute;
+  z-index: 1;
+  width: 50%;
+  height: 50%;
+  top: 25%;
+  left: 25%;
+  border: 1px solid;
+  background: rgb(255,255,255);
+  overflow: hidden;
+  display: none;
+}
+  
