--- a/static/style.css
+++ b/static/style.css
@@ -25,6 +25,14 @@ html,body {
   padding: auto;
 }
 
+
+.popup > div{
+	width:50%; 
+	margin-left:auto; 
+	margin-right:auto; 
+
+}
+
 .popup {
   position: absolute;
   z-index: 1;
@@ -35,4 +43,19 @@ html,body {
   border: 1px solid;
   background: rgb(255,255,255);
   overflow: hidden;
+}
+
+.plain_text{
+	float: left;
+	display:inline-block;
+}
+.input_field{
+	width: 15em;
+	float: right;
+}
+
+
+.login-button{
+	display:inline-block;
+
 }
