--- a/templates/question.html
+++ b/templates/question.html
@@ -1,16 +1,16 @@
-$def with (question, commentsList) #parameters coming in, 
+$def with (question, commentsList)
+
 <!-- question=> name(user name) , opt1, opt2, -->
-<!-- comments=> list of comments ->>
+<!-- comments=> list of comments -->
 <!-- comment object=> ans(string), up(int) , down(int) -->
 
 <div>
 	<div class="question">
 		$question.name 
-		
 	</div>
 	<ul> 
 		$for comment in commentsList:
-			<li>$comments.ans</li>
+			<li>$comment.ans</li>
 	</ul>
 
 </div>
