--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,6 @@
 html,body {
   background-color: #99CCFF;
+  background-image:url("water.JPG");
   width: 100%;
   height: 100%;
   text-align: center;
@@ -7,7 +8,13 @@ html,body {
   padding: 0px;
 	font-family: calibri;
 }
+#top{
+	font-family: Calibri;
+	font-size: 4em;
+	color: #99FFFF;
+	text-align: center;
 
+}
 #sbox > * {
   margin: 2px;
 }
