--- a/static/style.css
+++ b/static/style.css
@@ -8,6 +8,17 @@ html,body {
   padding: 0px;
 	font-family: calibri;
 }
+#top-right{
+	float: right;
+	border: solid;
+	border-color: #66FFCC;
+	margin-right:0.5em;
+	margin-left: 0.5em;
+	width: 6em;
+	text-align: center;
+	font-weight: bold;
+
+}
 #top{
 	font-family: Calibri;
 	font-size: 4em;
