--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,17 @@ $def with ()
 
 <div>
   <h1>Sign In</h1>
-  <span>Email: </span>
-  <input name='email' type='text'/><br/>
-  <span>Password: </span>
-  <input name='pword' type='text'/><br/>
-  <span>Confirm: </span>
-  <input name='repword' type='text'/><br/>
+  <div>
+	  <span class="logininfo">Email: </span>
+	  <input class="input_text" name='email' type='text'/><br/>
+  </div>
+  <div>
+	  <span class="logininfo">Password: </span>
+	  <input class="input_text" name='pword' type='password'/><br/>
+  </div>
+  <div>
+	  <span class="logininfo">Confirm: </span>
+	  <input class="input_text" name='repword' type='password'/><br/>
+  </div>
   <input type='button' value='Login' onclick='doLogin()'/>
 </div>
