--- a/templates/register.html
+++ b/templates/register.html
@@ -3,10 +3,10 @@ $def with ()
 <div>
   <h1>Register</h1>
   <span>Email: </span>
-  <input name='email' type='text'/><br/>
+  <input id='email' name='email' type='text'/><br/>
   <span>Password: </span>
-  <input name='pword' type='text'/><br/>
+  <input id='pword' name='pword' type='text'/><br/>
   <span>Confirm: </span>
-  <input name='repword' type='text'/><br/>
+  <input id='repword' name='repword' type='text'/><br/>
   <input type='button' value='Login' onclick='doRegister()'/>
 </div>
