--- a/templates/singleQ.html
+++ b/templates/singleQ.html
@@ -8,7 +8,7 @@ $def with (question, commentsList) #parameters coming in,
 </head>
 
 <div>
-	<span id="top-right" type="login">og-in</span>
+	<span id="top-right" type="login">Log-in</span>
 	<span id="top-right" type="signup">Sign up</span>
 	<h1>Questions</h1>
 	<div class="question">
