--- a/templates/register.html
+++ b/templates/register.html
@@ -1,18 +1,18 @@
 $def with ()
 
 <div>
-  <h1>Sign In</h1>
+  <h1>Register</h1>
   <div>
 	  <span class="logininfo">Email: </span>
 	  <input class="input_text" id='email' name='email' type='text'/><br/>
-  </div>
+  </div><br/>
   <div>
 	  <span class="logininfo">Password: </span>
 	  <input class="input_text" id='pword' name='pword' type='password'/><br/>
-  </div>
+  </div><br/>
   <div>
 	  <span class="logininfo">Confirm: </span>
 	  <input class="input_text" id='repword' name='repword' type='password'/><br/>
-  </div>
-  <input type='button' value='Login' onclick='doLogin()'/>
+  </div><br/>
+  <input type='button' value='Register' onclick='doLogin()'/>
 </div>
