--- a/templates/register.html
+++ b/templates/register.html
@@ -3,6 +3,10 @@ $def with ()
 <div>
   <h1>Register</h1>
   <div>
+	  <span class="logininfo">Name: </span>
+	  <input class="input_text" id='name' name='name' type='text'/><br/>
+  </div><br/>
+  <div>
 	  <span class="logininfo">Email: </span>
 	  <input class="input_text" id='email' name='email' type='text'/><br/>
   </div><br/>
