--- a/templates/qlist.html
+++ b/templates/qlist.html
@@ -3,5 +3,5 @@ $def with(qlist)
 
 <ul>
 	$for q in qlist:
-		<li>Should I $q.opt1 or $q.opt2 ? $q.name</li>
+		<li>Should I $q.opt1 or $q.opt2 ? by $q.name</li>
 </ul>
