--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@ $def with ()
     <span class='plain_text'>Email: </span>
     <input class="input_field" name='uname' type='text'/><br/><br/>
     <span class='plain_text'>Password: </span>
-    <input class="input_field" 'name='pass' type='text'/><br/><br/>
+    <input class="input_field" 'name='pass' type='password'/><br/><br/>
   </div>
   <div class='login-button'>			
     <input id="normal-login" type='button' value='Login'/>
