--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 $def with ()
 
-<div>
+<div id="login">
   <div>
     <span class='plain_text'>Email: </span>
     <input class="input_field" name='uname' type='text'/><br/><br/>
