--- a/static/style.css
+++ b/static/style.css
@@ -82,6 +82,11 @@ html,body {
   float: left;
 }
 
+#login{
+	padding-top:30%;
+	padding-bottom:30%;
+}
+
 .input_text{
   float: right;
   width: 20em;
