--- a/static/questions_style.css
+++ b/static/questions_style.css
@@ -40,6 +40,16 @@ ul{
 }
 
 li:hover{
-	color: gray;
+	color: #515757;
 	opacity: .5;
+}
+
+span{
+	border:2px solid;
+	border-radius:25px;
+	box-shadow: 10px 10px 5px #888888;
+}
+
+span:hover{
+	color: yellow;
 }
