--- a/static/questions_style.css
+++ b/static/questions_style.css
@@ -26,8 +26,8 @@ h1{
 	text-decoration: underline;
 }
 
-#bottom-right{
-	float: right;
+#bottom-left{
+	float: left;
 	border: solid;
 	margin-right:0.5em;
 	margin-left: 0.5em;
@@ -45,10 +45,11 @@ li:hover{
 }
 
 span{
+	width: 4em;
 	border:2px solid;
 	border-radius:25px;
 }
 
 span:hover{
-	color: yellow;
+	color: purple;
 }
