--- a/templates/register.html
+++ b/templates/register.html
@@ -4,19 +4,19 @@ $def with ()
   <h1>Register</h1>
   <div>
 	  <span class="logininfo">Name: </span>
-	  <input class="input_text" id='name' name='name' type='text'/><br/>
+	  <input class="input_field" id='name' name='name' type='text'/><br/>
   </div><br/>
   <div>
 	  <span class="logininfo">Email: </span>
-	  <input class="input_text" id='email' name='email' type='text'/><br/>
+	  <input class="input_field" id='email' name='email' type='text'/><br/>
   </div><br/>
   <div>
 	  <span class="logininfo">Password: </span>
-	  <input class="input_text" id='pword' name='pword' type='password'/><br/>
+	  <input class="input_field" id='pword' name='pword' type='password'/><br/>
   </div><br/>
   <div>
 	  <span class="logininfo">Confirm: </span>
-	  <input class="input_text" id='repword' name='repword' type='password'/><br/>
+	  <input class="input_field" id='repword' name='repword' type='password'/><br/>
   </div><br/>
   <input type='button' value='Register' onclick='doLogin()'/>
 </div>
