--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 $def with ()
 
 <div id="login">
+  <h1>Login</h1>
   <div>
     <span class='plain_text'>Email: </span>
     <input class="input_field" name='uname' type='text'/><br/><br/>
