--- a/templates/question.html
+++ b/templates/question.html
@@ -6,7 +6,7 @@ $def with (question, commentsList)
 
 <div>
 	<div class="question">
-		$question.name 
+		$question.name asked if they should $question.opt1 or $(question.opt2)...
 	</div>
 	<ul> 
 		$for comment in commentsList:
