--- a/static/questions_style.css
+++ b/static/questions_style.css
@@ -55,8 +55,10 @@ span:hover{
 }
 
 #comment{
+	font-family: Calibri;
 	width: 30%;
 	height: 20%;
 	border: 1px solid;
-	
+	margin-left: auto;
+	margin-right:auto;
 }
