--- a/static/questions_style.css
+++ b/static/questions_style.css
@@ -62,3 +62,12 @@ span:hover{
 	margin-left: auto;
 	margin-right:auto;
 }
+
+.bottom-right{
+	float: right;
+	border: solid;
+	margin-right:0.5em;
+	margin-left: 0.5em;
+	width: 6em;
+	text-align: center;
+}
