--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,7 @@ html,body {
   text-align: center;
   margin: 0px;
   padding: 0px;
-	font-family: calibri;
+  font-family: Calibri;
 }
 #top-right{
 	float: right;
