--- a/static/questions_style.css
+++ b/static/questions_style.css
@@ -17,22 +17,13 @@ h1{
 }
 
 .question{
-	margin-left: 3em;
+	margin-left: auto;
 	text-align: left;
 }
 
 .comments{
 	color: orange;
 	text-decoration: underline;
-}
-
-.bottom-left{
-	float: left;
-	border: solid;
-	margin-right:0.5em;
-	margin-left: 0.5em;
-	width: 6em;
-	text-align: center;
 }
 
 ul{
@@ -58,9 +49,26 @@ span:hover{
 	font-family: Calibri;
 	width: 30%;
 	height: 20%;
-	border: 1px solid;
+	border: 2px solid;
+  margin: 4px;
 	margin-left: auto;
 	margin-right:auto;
+}
+
+#comments{
+	font-family: Calibri;
+	border: 2px solid;
+  padding: 2px;
+}
+
+#cm-list {
+  margin-top: 2em;
+}
+
+#cm-list > li {
+  width: 40%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .bottom-right{
@@ -68,6 +76,15 @@ span:hover{
 	border: solid;
 	margin-right:0.5em;
 	margin-left: 0.5em;
-	width: 6em;
+	width: 10em;
+	text-align: center;
+}
+
+.bottom-left{
+	float: left;
+	border: solid;
+	margin-right:0.5em;
+	margin-left: 0.5em;
+	width: 10em;
 	text-align: center;
 }
