--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,12 @@ $def with ()
   <h1>Login</h1>
   <div>
     <span class='plain_text'>Email: </span>
-    <input class="input_field" name='uname' type='text'/><br/><br/>
+    <input class="input_field" name='email' type='text'/><br/><br/>
     <span class='plain_text'>Password: </span>
-    <input class="input_field" 'name='pass' type='password'/><br/><br/>
+    <input class="input_field" name='pass' type='password'/><br/><br/>
   </div>
   <div class='login-button'>			
-    <input id="normal-login" type='button' value='Login'/>
+    <input id="normal-login" type='button' value='Login' onclick='doLogin()'/>
     <span>or login here</span>
     <div id="fb-root"></div>
     <!--
