--- a/templates/register.html
+++ b/templates/register.html
@@ -21,5 +21,5 @@ $def with ()
   <div class="error" id="error">
 	
   </div>
-  <input type='button' value='Register' onclick='doLogin()'/>
+  <input type='button' value='Register' onclick='doRegister()'/>
 </div>
