--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@ $def with ()
     <span class='plain_text'>Email: </span>
     <input class="input_field" name='email' type='text'/><br/><br/>
     <span class='plain_text'>Password: </span>
-    <input class="input_field" name='pass' type='password'/><br/><br/>
+    <input class="input_field" name='pword' type='password'/><br/><br/>
   </div>
   <div class='login-button'>			
     <input id="normal-login" type='button' value='Login' onclick='doLogin()'/>
