--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,7 @@ $def with ()
     <span class='plain_text'>Password: </span>
     <input class="input_field" name='pword' type='password'/><br/><br/>
   </div>
+  <div id="error"></div>
   <div class='login-button'>			
     <input id="normal-login" type='button' value='Login' onclick='doLogin()'/>
     <span>or login here</span>
