--- a/templates/register.html
+++ b/templates/register.html
@@ -18,8 +18,6 @@ $def with ()
 	  <span class="logininfo">Confirm: </span>
 	  <input class="input_field" id='repword' name='repword' type='password'/><br/>
   </div><br/>
-  <div class="error" id="error">
-	
-  </div>
+  <div class="error" id="error"></div>
   <input type='button' value='Register' onclick='doRegister()'/>
 </div>
