--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@ $def with (xsrf)
   <div class='login-button'>			
     <input id="normal-login" type='button' value='Login' onclick='doLogin()'/>
     <span>or login here</span>
-    <div id="fb-root"></div>
+    <div id="fb-root" onload='fblogin()'></div>
     <!--
     Below we include the Login Button social plugin. This button uses the JavaScript SDK to
     present a graphical Login button that triggers the FB.login() function when clicked. -->
