--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,6 @@ $def with (xsrf)
     Below we include the Login Button social plugin. This button uses the JavaScript SDK to
     present a graphical Login button that triggers the FB.login() function when clicked. -->
     
-      <fb:login-button show-faces="false"></fb:login-button>
+      <fb:login-button show-faces="true"></fb:login-button>
   </div>
 </div>
